force-app/main/default/objects/AuditContact__c/AuditContact__c.object-meta.xml
<CustomObject>
    <label>Audit Contact</label>
    <nameField>
        <label>Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuditContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>