force-app/main/default/objects/AuditContact__c/fields/ChangeDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>ChangeDate</label>
    <type>Date</type>
</CustomField>