force-app/main/default/objects/AuditContact__c/fields/Concerned_User__c.field-meta.xml
<CustomField>
    <fullName>Concerned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concerned_User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AuditContacts</relationshipName>
    <type>Lookup</type>
</CustomField>