force-app/main/default/objects/AuditContact__c/fields/ConcernedObject__c.field-meta.xml
<CustomField>
    <fullName>ConcernedObject__c</fullName>
    <label>ConcernedObject</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>