force-app/main/default/objects/AuditContact__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <label>ObjectId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>