force-app/main/default/objects/AuditContact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ChangeDate__c</columns>
    <columns>Concerned_User__c</columns>
    <columns>ConcernedObject__c</columns>
    <columns>ObjectId__c</columns>
    <columns>Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>